# pgaudit_parser

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile
inc/: args.h  daemonize.h  logger.h  pgaudit_parser.h
src/: CMakeLists.txt  args.c  daemonize.c  logger.c  main.c  pgaudit_parser.c
